fix alert message alignment

--- a/src/app/components/message/message.component.sass
+++ b/src/app/components/message/message.component.sass
@@ -1,7 +1,6 @@
 article.message
   position: absolute
-  margin-left: auto
-  margin-right: auto
+  margin: auto
   z-index: 4
   left: 0
   right: 0
